fix spacing

--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -45,6 +45,7 @@
   p {
     font-size: 1.1rem;
     line-height: 1.5;
+    word-wrap: anywhere;
   }
 
   a {
